--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,9 +14,15 @@ body {
 .tracker {
   position: relative;
   height: 100vh; }
-  .tracker__kettlebell {
+  .tracker__frame {
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 40rem;
     transform: translate(-50%, -50%); }
+    .tracker__frame__clock__timer {
+      color: white;
+      position: absolute;
+      font-size: 20rem;
+      left: 52%;
+      top: 60%;
+      transform: translate(-50%, -50%); }
