--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -19,11 +19,20 @@ body {
     position: relative;
     height: 100vh;
 
-    &__kettlebell {
+    &__frame {
         position: absolute;
         top: 50%;
         left: 50%;
-        height: 40rem;
         transform: translate(-50%, -50%);
+
+        &__clock__timer {
+            color: white;
+            position: absolute;
+            font-size: 20rem;
+            left: 52%;
+            top: 60%;
+            transform: translate(-50%, -50%);
+        }
     }
+    
 }
