--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -24,15 +24,47 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        background-image: url(../img/kettlebell-2.png);
+        height: 50rem;
+        width: 50rem;
+        
+
+        &__clock {
+            opacity: 0;
+            background-color: cyan;
+            border-radius: 50%;
+            height: 26rem;
+            width: 26rem;
+            left: 50%;
+            top: 50%;
+            transform: translate(44%, 72%);
+        }
+
+        &__clock:hover {
+            transition: all .2s;
+            opacity: .5;
+        }
 
         &__clock__timer {
-            color: white;
             position: absolute;
+            top: 41%;
+            left: 30%;
+            color: rebeccapurple;
             font-size: 20rem;
-            left: 52%;
-            top: 60%;
-            transform: translate(-50%, -50%);
+            opacity: 1;
+            z-index: -1;
         }
+
+        // &__clock__timer {
+        //     z-index: 100;
+        //     background-color: red;
+        //     color: red;
+        //     position: absolute;
+        //     font-size: 20rem;
+        //     left: 52%;
+        //     top: 60%;
+        //     transform: translate(-50%, -50%);
+        // }
     }
     
 }
