--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 *,
 *::after,
 *::before {
@@ -21,7 +23,7 @@ body {
 
     &__frame {
         position: absolute;
-        top: 50%;
+        top: 70%;
         left: 50%;
         transform: translate(-50%, -50%);
         background-image: url(../img/kettlebell-2.png);
@@ -55,16 +57,43 @@ body {
             z-index: -1;
         }
 
-        // &__clock__timer {
-        //     z-index: 100;
-        //     background-color: red;
-        //     color: red;
-        //     position: absolute;
-        //     font-size: 20rem;
-        //     left: 52%;
-        //     top: 60%;
-        //     transform: translate(-50%, -50%);
-        // }
+        &__clock:active {
+            background-color: blue;
+        }
     }
     
+    &__card {
+        position: relative;
+        top: 8%;
+        left: 42%;
+        border-radius: 3px;
+        box-shadow: 0 1.5rem 4rem $color-shadow;
+        height: 22rem;
+        width: 17rem;
+        background-color: $card-color;
+
+        &__exercise-details {
+            z-index: 1;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+            .input-field {
+                color: white;
+                padding: .5rem;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-size: 1.5rem;
+                text-transform: uppercase;
+            }
+
+            .submit-exercise {
+                position: absolute;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-transform: uppercase;
+                width: 14rem
+            }
+        }
+    }
 }
