--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -20,10 +20,11 @@ body {
 .tracker {
     position: relative;
     height: 100vh;
+    // height: 80vh;
 
     &__frame {
         position: absolute;
-        top: 70%;
+        top: 60%;
         left: 50%;
         transform: translate(-50%, -50%);
         background-image: url(../img/kettlebell-2.png);
@@ -32,13 +33,14 @@ body {
         
 
         &__clock {
+            position: absolute;
             opacity: 0;
             background-color: cyan;
             border-radius: 50%;
             height: 26rem;
             width: 26rem;
-            left: 50%;
-            top: 50%;
+            // left: 50%;
+            // top: 50%;
             transform: translate(44%, 72%);
         }
 
@@ -63,8 +65,8 @@ body {
     }
     
     &__card {
-        position: relative;
-        top: 8%;
+        position: absolute;
+        
         left: 42%;
         border-radius: 3px;
         box-shadow: 0 1.5rem 4rem $color-shadow;
@@ -96,4 +98,46 @@ body {
             }
         }
     }
+}
+
+.card-stack {
+    position: relative;
+    top: 20%;
+    width: 10rem;
+    height: 20rem;
+    background-color: #777;
+    z-index: 2;
+    
+    .cards {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        background-color: #777;
+        
+        .card {
+            padding: 2rem;
+            background-color: cyan;
+            border-radius: 3px;
+            margin-left: -2rem;
+            box-shadow: 0 1.5rem 4rem rgba(black, 0.75);
+            transition: all .2s;
+        }
+
+        .card:not(:first-child) {
+            margin-top: -2rem;
+        }
+
+        .card:hover {
+            transform: translateX(3rem);
+        }
+
+        .card:hover {
+            ~ .card {
+                background-color: red;
+                transform: translateY(2.1rem);
+            }
+        }
+    }
+
+   
 }
