add content to stacked cards

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -47,7 +47,7 @@ body {
     position: absolute;
     left: 42%;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.75);
     height: 22rem;
     width: 17rem;
     background-color: #0c709e; }
@@ -74,25 +74,33 @@ body {
   position: relative;
   top: 20%;
   width: 10rem;
-  height: 20rem;
-  background-color: #777;
+  height: 10rem;
+  left: 5rem;
   z-index: 2; }
   .card-stack .cards {
     list-style-type: none;
     display: flex;
-    flex-direction: column;
-    background-color: #777; }
+    flex-direction: column; }
     .card-stack .cards .card {
-      padding: 2rem;
-      background-color: cyan;
+      position: relative;
+      padding: 1rem;
+      background-color: #075c5c;
       border-radius: 3px;
       margin-left: -2rem;
       box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.75);
-      transition: all .2s; }
+      transition: all .2s;
+      height: 22rem;
+      width: 17rem; }
+      .card-stack .cards .card .card-details {
+        position: absolute;
+        transform: translate(0, -50%);
+        top: 35%;
+        color: white;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 1.5rem; }
     .card-stack .cards .card:not(:first-child) {
-      margin-top: -2rem; }
+      margin-top: -17rem; }
     .card-stack .cards .card:hover {
       transform: translateX(3rem); }
     .card-stack .cards .card:hover ~ .card {
-      background-color: red;
-      transform: translateY(2.1rem); }
+      transform: translateY(12rem); }
