--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -69,7 +69,7 @@ body {
         
         left: 42%;
         border-radius: 3px;
-        box-shadow: 0 1.5rem 4rem $color-shadow;
+        box-shadow: 0 1.5rem 4rem rgba(black, 0.75);
         height: 22rem;
         width: 17rem;
         background-color: $card-color;
@@ -104,27 +104,38 @@ body {
     position: relative;
     top: 20%;
     width: 10rem;
-    height: 20rem;
-    background-color: #777;
+    height: 10rem;
+    left: 5rem;
     z-index: 2;
     
     .cards {
         list-style-type: none;
         display: flex;
         flex-direction: column;
-        background-color: #777;
         
         .card {
-            padding: 2rem;
-            background-color: cyan;
+            position: relative;
+            padding: 1rem;
+            background-color: rgb(7, 92, 92);
             border-radius: 3px;
             margin-left: -2rem;
             box-shadow: 0 1.5rem 4rem rgba(black, 0.75);
             transition: all .2s;
+            height: 22rem;
+            width: 17rem;
+
+            .card-details {
+                position: absolute;
+                transform: translate(0, -50%);
+                top: 35%;
+                color: white;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-size: 1.5rem;
+            }
         }
 
         .card:not(:first-child) {
-            margin-top: -2rem;
+            margin-top: -17rem;
         }
 
         .card:hover {
@@ -133,8 +144,7 @@ body {
 
         .card:hover {
             ~ .card {
-                background-color: red;
-                transform: translateY(2.1rem);
+                transform: translateY(12rem);
             }
         }
     }
