--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -224,6 +224,21 @@ body {
         box-shadow: 0 1px 3px black;
         bottom: 20px;
         z-index: 2;
+
+        .float-add {
+            transition: all .3s;
+        }
+
+        .float-add:hover {
+            transition: all .3s;
+            filter: brightness(115%);
+        }
+
+        .float-add:active {
+            transform: translateY(2px);
+            box-shadow: 0 0 0 black;
+            filter: brightness(90%);
+        }
     }
     
 }
