--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -164,19 +164,33 @@ body {
     position: fixed;
     height: 10rem;
     width: 100%;
-    background-color: ff7e67;
+    background-color: #4e9a06;
     box-shadow: 0 1px 3px black;
-    bottom: 20px;
+    bottom: 3rem;
     z-index: 2; }
     .best-quilt .bar .float-add {
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
       transition: all .3s; }
     .best-quilt .bar .float-add:hover {
       transition: all .3s;
       filter: brightness(115%); }
     .best-quilt .bar .float-add:active {
-      transform: translateY(2px);
+      transform: translate(0, -47%);
       box-shadow: 0 0 0 black;
       filter: brightness(90%); }
+    .best-quilt .bar .wt {
+      top: 85%;
+      padding: 2rem 2rem;
+      background: transparent;
+      border: none;
+      margin-top: 2rem;
+      margin-left: 2rem;
+      color: white;
+      font-family: monospace;
+      font-size: 3rem;
+      width: 80%; }
 
 .float-add {
   position: fixed;
