--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -112,7 +112,6 @@ body {
   height: auto; }
 
 .column {
-  float: left;
   padding: 10px;
   height: 100vh; }
 
@@ -132,13 +131,14 @@ body {
   display: grid;
   grid-template: repeat(3, 1fr)/10% 1fr 1fr 10%;
   width: 60%;
-  height: 80vh;
+  height: 90vh;
   background-color: pink;
-  margin: auto; }
+  align-self: flex-end; }
 
 .workout-vid {
   grid-area: 2 / 2;
-  width: 100%; }
+  width: 100%;
+  height: 100%; }
 
 .side-bar-log {
   width: 20%;
@@ -157,7 +157,7 @@ body {
     background-color: cyan; }
 
 .search-and-add-options {
-  background-color: gray;
+  background-color: pink;
   grid-area: 3 / 2 / span 1 / span 2;
   display: grid;
   grid-template: 40% 1fr 40% / 1fr 12.5% 12.5%; }
@@ -201,3 +201,13 @@ body {
   content: "";
   background-color: red;
   height: 75%; }
+
+.side-bar-log .past-cards {
+  display: flex;
+  flex-direction: column; }
+  .side-bar-log .past-cards li {
+    list-style-type: none;
+    height: 100px;
+    width: 80%;
+    background-color: cyan;
+    margin: auto auto 10px auto; }
