--- a/web/sass/main.scss
+++ b/web/sass/main.scss
@@ -321,7 +321,6 @@ body {
 // }
 
 .column {
-    float: left;
     padding: 10px;
     height: 100vh;
 }
@@ -344,14 +343,15 @@ body {
     display: grid;
     grid-template: repeat(3, 1fr) / 10% 1fr 1fr 10%;
     width: 60%;
-    height: 80vh;
+    height: 90vh;
     background-color: pink;
-    margin: auto;
+    align-self: flex-end;
 }
 
 .workout-vid {
     grid-area: 2 / 2;
     width: 100%;
+    height: 100%;
 }
 
 .side-bar-log {
@@ -375,7 +375,7 @@ body {
 }
 
 .search-and-add-options {
-    background-color: gray;
+    background-color: pink;
     grid-area: 3 / 2 / span 1 / span 2;
     display: grid;
     grid-template: 40% 1fr 40% / 1fr 12.5% 12.5%;
@@ -414,8 +414,6 @@ body {
 }
 
 
-
-
 .progress {
     line-height: 0;
     color: transparent;
@@ -432,8 +430,17 @@ body {
     height: 75%;
 }
 
+.side-bar-log {
+    .past-cards {
+        display: flex;
+        flex-direction: column;
 
-@media only screen and (min-width: 981px) {
-    
-
+        li {
+           list-style-type: none;
+           height: 100px; 
+           width: 80%;
+           background-color: cyan;
+           margin: auto auto 10px auto;
+        }
+    }
 }
